--- a/docs/404.md
+++ b/docs/404.md
@@ -17,7 +17,7 @@ Sorry, the page you were looking for doesn't exist.
 - [Go back to the homepage](./index.md)
 - Use the search function at the top of the page
 - Check out some of my popular content:
-  - [RAG resources](./systematically-improve-your-rag.md)
+  - [RAG Series Index](./writing/posts/rag-series-index.md)
   - [User Manual](./user_manual.md)
 
 If you believe this is an error, please [open an issue on GitHub](https://github.com/jxnl/blog/issues/new) or [contact me on Twitter](https://twitter.com/jxnlco).
